[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Pokemon Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Pokemon Solid.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Move.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pokeball Icon.png" type="Texture" id=5]
[ext_resource path="res://Loading.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
border_width_left = 10
border_width_top = 10
border_width_bottom = 10
border_color = Color( 0.188235, 0.384314, 0.188235, 1 )
corner_radius_top_left = 75
corner_radius_bottom_left = 75

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.545098, 0.67451, 0.0588235, 1 )
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
corner_radius_top_right = 75
corner_radius_bottom_right = 75

[sub_resource type="DynamicFont" id=3]
size = 32
outline_color = Color( 0.164706, 0.458824, 0.733333, 1 )
extra_spacing_char = 12
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Theme" id=5]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 4 )
VScrollBar/styles/grabber_highlight = SubResource( 4 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 4 )
VScrollBar/styles/scroll_focus = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0.792157, 0.862745, 0.623529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="VBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Search" type="HBoxContainer" parent="UI"]
margin_right = 720.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="UI/Search"]
margin_right = 514.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.545098, 0.67451, 0.0588235, 1 )
text = "Pok√©mon"
align = 1
max_length = 20
expand_to_text_length = true
placeholder_alpha = 1.0

[node name="Button" type="Button" parent="UI/Search"]
margin_left = 514.0
margin_right = 720.0
margin_bottom = 67.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.188235, 0.384314, 0.188235, 1 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
enabled_focus_mode = 0
text = "Buscar"

[node name="PokemonSpriteHeaders" type="HBoxContainer" parent="UI"]
margin_top = 67.0
margin_right = 720.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 0

[node name="Sprite" type="Label" parent="UI/PokemonSpriteHeaders"]
margin_right = 360.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "Normal"
align = 1
valign = 1

[node name="ShinySprite" type="Label" parent="UI/PokemonSpriteHeaders"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "Shiny"
align = 1
valign = 1

[node name="PokemonSprites" type="HBoxContainer" parent="UI"]
margin_top = 134.0
margin_right = 720.0
margin_bottom = 403.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 0

[node name="Sprite" type="TextureRect" parent="UI/PokemonSprites"]
margin_right = 360.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ShinySprite" type="TextureRect" parent="UI/PokemonSprites"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="PokemonModelHeaders" type="HBoxContainer" parent="UI"]
margin_top = 403.0
margin_right = 720.0
margin_bottom = 470.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 0

[node name="3DModel" type="Label" parent="UI/PokemonModelHeaders"]
margin_right = 360.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "Modelo 3D"
align = 1
valign = 1

[node name="3DShiny" type="Label" parent="UI/PokemonModelHeaders"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "Modelo 3D Shiny"
align = 1
valign = 1

[node name="PokemonModels" type="HBoxContainer" parent="UI"]
margin_top = 470.0
margin_right = 720.0
margin_bottom = 739.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 0

[node name="Model" type="TextureRect" parent="UI/PokemonModels"]
margin_right = 360.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="ShinyModel" type="TextureRect" parent="UI/PokemonModels"]
margin_left = 360.0
margin_right = 720.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 6

[node name="PokemonMoves" type="VBoxContainer" parent="UI"]
margin_top = 739.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_constants/separation = 8

[node name="PokemonMoves" type="HBoxContainer" parent="UI/PokemonMoves"]
visible = false
margin_right = 720.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 0

[node name="MoveList" parent="UI/PokemonMoves/PokemonMoves" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 541.0

[node name="PokemonMovesContainer" type="ScrollContainer" parent="UI/PokemonMoves"]
visible = false
margin_top = 84.0
margin_right = 720.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
scroll_horizontal_enabled = false

[node name="PokemonMoves" type="VBoxContainer" parent="UI/PokemonMoves/PokemonMovesContainer"]
margin_right = 720.0
margin_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="LoadingContainer" type="CenterContainer" parent="UI/PokemonMoves"]
visible = false
margin_top = 426.0
margin_right = 720.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Loading" parent="UI/PokemonMoves/LoadingContainer" instance=ExtResource( 6 )]
margin_left = 360.0
margin_top = 57.0
margin_right = 360.0
margin_bottom = 57.0

[node name="Requests" type="Node" parent="."]
